Added default active flag parameter; added endpoint for subcategories by ID
